--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.4.5",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.3"
